[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Levels/Level1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Duck.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 963.281, 209.187, 0, 0, 0, 0, 748.465, 300.029, 0, 0, 0, 0, 563.573, 184.605, 0, 0, 0, 0, 338.069, 160.024, 0, 0, 0, 0, 202.339, 291.479, 0, 0, 0, 0, 242.951, 471.028, 0, 0, 0, 0, 320.969, 407.972, 0, 0, 0, 0, 319.9, 289.342, 0, 0, 0, 0, 375.475, 259.417, 0, 0, 0, 0, 469.524, 266.898, 0, 0, 0, 0, 463.111, 393.01, 0, 0, 0, 0, 363.718, 564.008, 0, 0, 0, 0, 498.38, 530.877, 0, 0, 0, 0, 506.93, 425.072, 0, 0, 0, 0, 527.236, 343.848, 0, 0, 0, 0, 653.347, 363.085, 0, 0, 0, 0, 667.24, 488.128, 0, 0, 0, 0, 733.502, 508.434, 0, 0, 0, 0, 825.414, 390.872, 0, 0, 0, 0, 957.938, 351.329, 0, 0, 0, 0, 1049.85, 372.704 )
}

[node name="Level1" type="Node"]
script = ExtResource( 1 )
Duck = ExtResource( 2 )

[node name="DuckPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
